# imageapply

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  publish_test.yml  run_tests.yml  tests.yml
docs/: conf.py  imageapply.rst  index.rst  modules.rst
docs/source/: data.rst  flexible_model.rst
imageapply/: __init__.py  data.py  flexible_model.py  imageapply.py  preprocess.py  revtransform.py  tools.py
tests/: test_model_wrapper.py  test_tools.py
